# cData-32-64

core/: pom.xml
core/src/main/java/io/fybrik/adp/core/jni/: JniLoader.java  JniWrapper.java
core/src/main/java/io/fybrik/adp/core/transformer/: IPCTransformer.java  NoCopyByteArrayOutputStream.java  NoOpTransformer.java  Transformer.java  WasmTransformer.java
core/src/main/rust/adp_core/: Cargo.toml
core/src/main/rust/adp_core/src/: arch.rs  core.rs  core_jni.rs  lib.rs
flight-client/src/main/java/io/fybrik/adp/flight/: ExampleFlightClient.java
flight-server/src/main/java/io/fybrik/adp/flight/: App.java  ExampleFlightServer.java  ExampleProducer.java
wasm/transformer/: Cargo.toml
wasm/transformer/src/: allocator.rs  array.rs  common.rs  lib.rs  schema.rs  transform.rs  types.rs
