[package]
name = "adp_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.7"
jni = "0.19.0"
wasmer = "2.0"
wasmer-wasi = "2.0"
arrow = { path = "/home/mohammadtn/FFI32/arrow-rs/arrow", default-features = false, features = ["prettyprint"]}
dhat = "0.2.4"
wee_alloc = "0.4.5"
wasm-tracing-allocator = "0.1.0"
#wasmtime = "0.31.0"
#wasmtime-wasi = "0.31.0"

[profile.release]
debug = 1